# Test

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODING_STYLE.md  README.md  generate_readmes.py
engine/animation/: CMakeLists.txt  README.md
engine/animation/deformation/: README.md
engine/animation/rigging/: README.md
engine/animation/skinning/: README.md
engine/animation/src/: README.md  api.cpp  serialization.cpp
engine/animation/src/deformation/: linear_blend_skinning.cpp
engine/animation/tests/: CMakeLists.txt  README.md  test_blend_tree.cpp  test_clip_serialization.cpp  test_module.cpp  test_rig_binding.cpp  test_skinning.cpp
engine/assets/: CMakeLists.txt  README.md
engine/assets/samples/: README.md
engine/assets/shaders/: README.md
engine/assets/src/: README.md  api.cpp  graph_asset.cpp  material_asset.cpp  mesh_asset.cpp  point_cloud_asset.cpp  shader_asset.cpp  texture_asset.cpp
engine/assets/tests/: CMakeLists.txt  README.md  test_assets.cpp  test_async.cpp  test_module.cpp
engine/compute/: CMakeLists.txt  README.md
engine/compute/cuda/: CMakeLists.txt  README.md
engine/compute/cuda/src/: README.md  api.cpp
engine/compute/cuda/tests/: CMakeLists.txt  README.md  test_module.cpp
engine/compute/src/: README.md  api.cpp
engine/compute/tests/: CMakeLists.txt  README.md  test_module.cpp
engine/core/: CMakeLists.txt  README.md
engine/core/application/: README.md
engine/core/configuration/: README.md
engine/core/diagnostics/: README.md
engine/core/ecs/: README.md
engine/core/memory/: README.md
engine/core/parallel/: README.md
engine/core/plugin/: README.md
engine/core/runtime/: README.md
engine/core/src/: README.md  api.cpp
engine/core/src/ecs/: registry.cpp  system.cpp
engine/core/src/threading/: io_thread_pool.cpp
engine/core/tests/: CMakeLists.txt  README.md  ecs_registry_tests.cpp  io_thread_pool_tests.cpp  resource_pool_tests.cpp  test_module.cpp
engine/geometry/: CMakeLists.txt  README.md
engine/geometry/csg/: README.md
engine/geometry/decimation/: README.md
engine/geometry/mesh/: README.md
engine/geometry/src/: README.md  api.cpp  point_cloud.cpp  property_registry.cpp  shapes.cpp
engine/geometry/src/deform/: linear_blend_skinning.cpp
engine/geometry/src/graph/: graph.cpp  graph_io.cpp
engine/geometry/src/mesh/: halfedge_mesh.cpp  halfedge_mesh_io.cpp  surface_mesh_conversion.cpp
engine/geometry/src/point_cloud/: point_cloud.cpp  point_cloud_io.cpp
engine/geometry/src/properties/: property_handle.cpp  property_registry.cpp
engine/geometry/src/shapes/: README.md  aabb.cpp  cylinder.cpp  ellipsoid.cpp  line.cpp  obb.cpp  plane.cpp  random.cpp  ray.cpp  segment.cpp  sphere.cpp  triangle.cpp
engine/geometry/src/utils/: shape_interactions.cpp
engine/geometry/surfaces/: README.md
engine/geometry/tests/: CMakeLists.txt  README.md  test_deformation.cpp  test_graph.cpp  test_graph_io.cpp  test_halfedge_io.cpp  test_halfedge_mesh.cpp  test_kdtree.cpp  test_module.cpp  test_octree.cpp  test_point_cloud.cpp  test_property_registry.cpp  test_shape_interactions.cpp  test_shapes.cpp  test_surface_mesh_conversion.cpp  test_surface_mesh_io.cpp
engine/geometry/topology/: README.md
engine/geometry/uv/: README.md
engine/geometry/volumetric/: README.md
engine/io/: CMakeLists.txt  README.md
engine/io/cache/: README.md
engine/io/exporters/: README.md
engine/io/importers/: README.md
engine/io/src/: README.md  animation_importer.cpp  api.cpp  geometry_io.cpp  geometry_io_registry.cpp
engine/io/tests/: CMakeLists.txt  README.md  geometry_io_registry_tests.cpp  test_animation_importer.cpp  test_geometry_io.cpp  test_module.cpp
engine/math/: CMakeLists.txt  README.md
engine/math/tests/: CMakeLists.txt  README.md  test_math.cpp
engine/physics/: CMakeLists.txt  README.md
engine/physics/collision/: README.md
engine/physics/dynamics/: README.md
engine/physics/src/: README.md  api.cpp  collisions.cpp
engine/physics/tests/: CMakeLists.txt  README.md  test_module.cpp
engine/platform/: CMakeLists.txt  README.md
engine/platform/filesystem/: README.md
engine/platform/input/: README.md
engine/platform/src/: README.md  api.cpp  window_console.cpp  window_system.cpp
engine/platform/tests/: CMakeLists.txt  README.md  filesystem_tests.cpp  input_state_tests.cpp  test_module.cpp  window_console_tests.cpp  window_system_tests.cpp  window_test_app.cpp
engine/platform/windowing/: README.md
engine/rendering/: CMakeLists.txt  README.md
engine/rendering/backend/: README.md
engine/rendering/backend/metal/: README.md  (+1 more)
engine/rendering/lighting/: README.md
engine/rendering/materials/: README.md
engine/rendering/passes/: README.md
engine/rendering/pipeline/: README.md
engine/rendering/resources/: README.md  recording_gpu_resource_provider.hpp  synchronization.hpp
engine/rendering/src/: README.md  api.cpp  forward_pipeline.cpp  frame_graph.cpp  material_system.cpp
engine/rendering/tests/: CMakeLists.txt  README.md  command_encoder_test_utils.hpp  scheduler_test_utils.hpp  test_backend_adapters.cpp  test_forward_pipeline.cpp  test_frame_graph.cpp  test_module.cpp  test_vulkan_resource_translation.cpp
engine/rendering/visibility/: README.md
engine/runtime/: CMakeLists.txt  README.md
engine/runtime/src/: README.md  api.cpp  subsystem_registry.cpp
engine/runtime/tests/: CMakeLists.txt  README.md  test_module.cpp
engine/scene/: CMakeLists.txt  README.md
engine/scene/components/: README.md  hierarchy.hpp  name.hpp  transform.hpp
engine/scene/graph/: README.md
engine/scene/serialization/: README.md  serializer.cpp  serializer.hpp
engine/scene/src/: README.md  api.cpp  scene.cpp
engine/scene/systems/: README.md  hierarchy_system.cpp  hierarchy_system.hpp  registry.cpp  registry.hpp  transform_system.cpp
engine/scene/tests/: CMakeLists.txt  README.md  scene_destruction_tests.cpp  test_components.cpp  test_module.cpp  test_serialization.cpp  test_systems.cpp
engine/tests/integration/: CMakeLists.txt  README.md  test_runtime_integration.cpp
(+297 files in other folders)
